misplelted logo src path

--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDC0DBEE92"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-SDC0DBEE92');
+  </script>
   <link rel="icon" href="imgs/siteIcon.png">
-  <title>SENDNET.CO | steve's profile</title>
+  <title>CONTACT SENDNET | SENDNET</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="styles/components.css" rel="stylesheet"/>
   <link href="styles/contact.css" rel="stylesheet"/>
   <meta name="title" content="sendnet">
-  <meta name="description" content="we create, host and maintain websites for service based industries">
-  <meta name="keywords" content="sendnet, sendnet.co, send, net, website creation, website design, website develop, SendNet, Send Net, webdesign">
+  <meta name="description" content="Contact Sendnet today for a free Quote and Consultaion, Work with us Today, So You Can Focus on the more Important Aspects of Your Business">
+  <meta name="keywords" content="Contact Sendnet Now, Sendnet Online, Free Quote For Websites New Zealand, Free Quote Websites NZ, Call Sendnet, Sendnet Phone Number, Sendnet Email Address">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
-  <meta name="author" content="steven metry">
+  <meta name="author" content="Sendnet">
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <img class="nav-logo" src="imgs/whiteLogo.png" alt="logo">
+      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - Small">
     </div>
     <div class="nav-right">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services I Can Provide</a>
-      <a href="projects.html">Past Work</a>
+      <a hreflang="en-us" href="index.html">Home</a>
+      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="projects.html">Past Work</a>
       <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Me</button>
     </div>
   </nav>
@@ -130,9 +138,9 @@
     </div>
     <div class="footer-right">
       <h3 class="font-mono">Projects:</h3>
-      <a href="projects.html#floorPlans">3D Floor Plans</a>
-      <a href="projects.html#interrier">Interriers</a>
-      <a href="projects.html#exterior">Exterior</a>
+      <a hreflang="en-us" href="projects.html#floorPlans">3D Floor Plans</a>
+      <a hreflang="en-us" href="projects.html#interrier">Interriers</a>
+      <a hreflang="en-us" href="projects.html#exterior">Exterior</a>
     </div>
   </footer>
   <script src="components.js"></script>
