--- a/index.html
+++ b/index.html
@@ -1,30 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDC0DBEE92"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-SDC0DBEE92');
+  </script>
   <link rel="icon" href="imgs/siteIcon.png">
-  <title>SENDNET.CO | steve's profile</title>
+  <title>SENDNET.CO | SENDNET - Cutting Edge</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="styles/components.css" rel="stylesheet"/>
   <link href="styles/index.css" rel="stylesheet"/>
   <meta name="title" content="sendnet">
-  <meta name="description" content="we create, host and maintain websites for service based industries">
-  <meta name="keywords" content="sendnet, sendnet.co, send, net, website creation, website design, website develop, SendNet, Send Net, webdesign">
+  <meta name="description" content="We Create, Host && Maintain websites for service based industries, all for a 1 OFF Payment">
+  <meta name="keywords" content="sendnet, sendnet.co, send, net, website creation, website design, website develop, SendNet, Send Net, webdesign, sendet, contact sendnet today, NZ Website Designers">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
   <meta name="author" content="steven metry">
+  <meta name="og:title" property="og:title" content="Sendnet Builds Your Websites AND Maintain your website for a one time payment">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Basic Static Page Website",
+      "description": "A standered business Website that allows end-users to view your services, book in appointments, contact your business.",
+      "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "4",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Ed Anderson"
+        }
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.1",
+        "reviewCount": "22"
+      }
+    }
+    </script>
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <img class="nav-logo" src="imgs/whiteLogo.png" alt="logo">
+      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - small">
     </div>
     <div class="nav-right">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services I Can Provide</a>
-      <a href="projects.html">Past Work</a>
-      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Me</button>
+      <a hreflang="en-us" href="index.html">Home</a>
+      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="projects.html">Past Work</a>
+      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Us</button>
     </div>
   </nav>
   <main class="main-content">
@@ -33,35 +67,35 @@
     <h3>Professional Secure Sites Created using cutting-edge Languages</h3>
     <button onclick="goToDifferentPage('services')" class="main-btn m-auto">Explore</button>
   </div>
-  <img src="imgs/sendnet-landing-pg.png" alt="realistic reader of sendnet as a image">
+  <img src="imgs/sendnet-landing-pg.png" alt="Sendnet Home Page, Advetising Sendnet's Services">
     <div class="content-container">
       <h1>Make your Site Stand Out</h1>
       <h3>Immersive Cinematic Sites is the Future of Marketing. With NextJs u can take your users through your Sales Funnel with Speed.</h3>
       <button onclick="goToDifferentPage('services')" class="main-btn m-auto">Explore</button>
     </div>
-    <img src="imgs/devolper-infront-of-desk.jpeg" alt="realistic reader of sendnet as a image">
+    <img src="imgs/devolper-infront-of-desk.jpeg" alt="Sendnet Web Devolper working infront of desk">
     <div class="block-container">
         <h1>Actions Speak Louder than Words</h1>
         <h2>Sell your work by showing end-users what they’re buying</h2>
-      <img class="" src="imgs/laptop.png">
+      <img src="imgs/laptop.png" alt="large-laptop that advertise one of our website templates">
       <button onclick="goToDifferentPage('projects')" class="main-btn m-auto">Past Work</button>
     </div>
     <div class="main-cards-container">
       <h3 class="mt-24 text-center font-mono font-thin text-5xl">People Judge Books by their Covers, Be the one they pick.</h3>
       <div class="cards-container">
         <div class="each-card-container">
-          <img src="imgs/nzarchviz.png" alt="interrier Realistic Photo Render of a home in queenstown">
+          <img src="imgs/nzarchviz.png" alt="Past Work we did for nzarchviz - nzarchviz.co.nz">
             <h2>NZARCHVIZ</h2>
             <p>
               The Landing Page has the main purpose of drawing in the viewer to see what you can offer. We use cutting-edge softwares that allows us to create heat maps from your designs and make adjustments to maximize lead generation.
             <br>  
               Every Site has a landing page but people expect a level of activity or life in any custom or high-end Site.   
            </p>
-          <a href="https://www.nzarchviz.co.nz" class="m-auto">Explore</a>
+          <a hreflang="en-us" href="https://www.nzarchviz.co.nz" class="m-auto black-a-btn">Explore</a>
         </div>
         <div class="each-card-container">
-          <img src="imgs/ecomstore-nextJS.png" alt="3D Floor Plan Realistic Photo Render">
-            <h2>Ecomstore NextJs</h2>
+          <img src="imgs/laptop02.png" alt="Previous Ecommerce Store - shop.sendnet.co">
+            <h2>Ecommerce Store - NextJs</h2>
             <hr>
             <h3>Online Stores provide 2 main purposes.</h3>
             <p>
@@ -69,27 +103,33 @@
             <br>
             2nd - as a marketing tool. The majority of major companies have a digital presence, including a website. The market has taken a huge liking towards online marketing simplicity because it's more easily accessible to users, websites are easily scalable physical stores are not.
             </p>
-          <a href="https://ecomstore-nextjs-demo.vercel.app" class="m-auto">Explore</a>
+          <a hreflang="en-us" href="https://shop.sendnet.co" class="m-auto black-a-btn">View Live Demo</a>
         </div>
         <div class="each-card-container">
-          <img src="imgs/github.png" alt="Exterior Realistic Photo Render of a Small Modern Family Home">
+          <img src="imgs/github.png" alt="Some Example Work Hosted On Github - Sendnet's Github Profile - github.com/stevemetry">
             <h2>More on Github..</h2>
             <p>
               The Exterior shot has the main purpose of showing off the house as an attractive asset. Plain and simple people want to have nice things, A mediocre car and a Mercedes will still get you to the same place but one is a positive extension of yourself and the other is a negative display of it. 
             <br>
               The Exterior shot also serves for the client to adjust any major concerns with materials,  or anything that doesn't fit right.
             </p>
-          <a href="https://github.com/stevemetry" class="m-auto">Explore</a>
+          <a hreflang="en-us" href="https://github.com/stevemetry" class="m-auto black-a-btn">Explore</a>
         </div>
       </div>
     </div>
-    <img src="imgs/team-img.jpeg" alt="realistic reader of the exterior of a home">
+    <div class="block-container">
+      <h1>LIVE DEMO: Show Dont Tell</h1>
+      <h2>We Dont Need to Say much, Our Work talks for us Check Out Our Ecommerce Demo store that we can put in Production for For You Today!</h2>
+    <img src="imgs/laptop02.png" alt="View A Demo Of a Ecommerce Store We can Build for Your">
+      <a hreflang="en-us" href="https://shop.sendnet.co" class="m-auto black-a-btn">View Demo</a>
+  </div>
+    <img src="imgs/team-img.jpeg" alt="Sendnet Team Members Group Photo">
     <div class="content-container">
       <h1>Sendnet Strives for Design Excellence at an Affordable price</h1>
       <h3>Let us prove how much your Customers will appreciate The difference we make.</h3>
       <button onclick="goToDifferentPage('services')" class="main-btn m-auto">Get a Quick Quote</button>
     </div>
-    <img src="imgs/sendnet-banner.png" class="w-full" alt="realistic reader of the interrier of a family home">
+    <img src="imgs/sendnet-banner.png" class="w-full" alt="SendNet's Advertising Banner">
   <div class="main-contact-container">
     <div class="site-info-container">
       <h1>Contact Us.</h1>
@@ -191,9 +231,9 @@
     </div>
     <div class="footer-right">
       <h3 class="font-mono">Projects:</h3>
-      <a href="projects.html#floorPlans">3D Floor Plans</a>
-      <a href="projects.html#interrier">Interriers</a>
-      <a href="projects.html#exterior">Exterior</a>
+      <a hreflang="en-us" href="projects.html#floorPlans">3D Floor Plans</a>
+      <a hreflang="en-us" href="projects.html#interrier">Interriers</a>
+      <a hreflang="en-us" href="projects.html#exterior">Exterior</a>
     </div>
   </footer>
   </main>
