--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDC0DBEE92"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SDC0DBEE92');
+  </script>
   <link rel="icon" href="imgs/siteIcon.png">
-  <title>SENDNET.CO | steve's profile</title>
+  <title>SENDNET'S PAST WORK | SENDNET</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="styles/components.css" rel="stylesheet"/>
   <link href="styles/projects.css" rel="stylesheet"/>
@@ -14,49 +22,62 @@
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
   <meta name="author" content="steven metry">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Projects",
+      "name": "Sendnet's Projects",
+      "author": {
+        "@type": "Person",
+        "name": "Steven Metry"
+      },
+      "datePublished": "2022-18-11",
+      "description": "We Build Your Websites & maintain your Website, all for a one time Payment, enquire on sendnet.co",
+    }
+    </script>
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <img class="nav-logo" src="imgs/whiteLogo.png" alt="logo">
+      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - small">
     </div>
     <div class="nav-right">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services I Can Provide</a>
-      <a href="projects.html">Past Work</a>
-      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Me</button>
+      <a hreflang="en-us" href="index.html">Home</a>
+      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="projects.html">Past Work</a>
+      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Us</button>
     </div>
   </nav>
   <main class="main-projects-container">
     <h1>All Designs</h1>
-    <video class="m-auto" controls muted poster="imgs/vid-thumb.png">
+    <video class="m-auto" controls muted poster="imgs/project-vid-thumb.png" preload="metadata">
       <source src="videos/sendnet02.mp4" type="video/mp4" alt="our immersive 3D cinematic designs">
       Your browser does not support the video tag.
     </video>
     <div class="projects-container">
       <h1 class="font-thin font-mono text-3xl" id="exterior">Exterior</h1>
       <div class="grid grid-cols-2 gap-4">
-        <img src="imgs/exterior-home.jpeg" alt="Render of the exterior of a Modern Family Home" />
-        <img src="imgs/miniFamilyHome.jpeg" alt="Render of the exterior of a Modern Family Home" />
-        <img src="imgs/brickHome.jpeg" alt="Render of the exterior of a Modern Family Home" />
-        <img src="imgs/summerFamily.png" alt="Render of the exterior of a Modern Family Home" />
-        <img src="imgs/exterierModern.jpeg" alt="Render of the exterior of a Modern Family Home" />
-        <img src="imgs/queenstownModern.jpg" alt="Render of the exterior of a Modern Family Home" />
+        <img src="imgs/exterior-home.jpeg" alt="design created by Sendnet of exterior of a home" />
+        <img src="imgs/miniFamilyHome.jpeg" alt="design by Sendnet of a small family home" />
+        <img src="imgs/brickHome.jpeg" alt="created by Sendnet, a render of a modern brick home" />
+        <img src="imgs/summerFamily.png" alt="Sendnet's project for a 3D visilisation of a vibrant summer Home" />
+        <img src="imgs/exterierModern.jpeg" alt="design created by Sendnet of a modern home - exterior view" />
+        <img src="imgs/queenstownModern.jpg" alt="modern home in questown - design by sendnet" />
       </div>
       <h1 class="font-thin font-mono text-3xl" id="interrier">Interriers</h1>
       <div class="grid grid-cols-2 gap-4">
-        <img src="imgs/cabinInMountin.jpeg" alt="Render of the Interrier of a Modern Family Home" />
-        <img src="imgs/interierModern.jpeg" alt="Render of the Interrier of a Modern Family Home" />
-        <img src="imgs/familyHome.png" alt="Render of the Interrier of a Modern Family Home" />
+        <img src="imgs/cabinInMountin.jpeg" alt="off grid cabin in the mountin - design created by Sendnet" />
+        <img src="imgs/interierModern.jpeg" alt="inside view of a modern home - Sendnet" />
+        <img src="imgs/familyHome.png" alt="brand new family home - 3D Render by Sendnet" />
         <img src="imgs/winterHome.jpeg" alt="Render of the Interrier of a Modern Family Home" />
-        <img src="imgs/cityLife.jpeg" alt="Render of the Interrier of a Modern Family Home" />
-        <img src="imgs/store.jpeg" alt="Render of the Interrier of a Modern Family Home" />
+        <img src="imgs/cityLife.jpeg" alt="City Life - Sendnet Creative's Example" />
+        <img src="imgs/store.jpeg" alt="fancy jewellery store - SendNet Past Work Examples" />
       </div>
       <h1 class="font-thin font-mono text-3xl" id="floorPlans">3D Floor Plans:</h1>
       <div class="grid grid-cols-2 gap-4">
-        <img src="imgs/3DRender.jpg" alt="Rendering 3D floor-plans of a Modern Family Home" />
-        <img src="imgs/sideView.jpeg" alt="Rendering 3D floor-plans of a Modern Family Home" />
-        <img src="imgs/angledView.jpeg" alt="Rendering 3D floor-plans of a Modern Family Home" />
+        <img src="imgs/3DRender.jpg" alt="3D Floor Plan, Basic Bachalor Pad Home - Created By Sendnet" />
+        <img src="imgs/sideView.jpeg" alt="Rendered Floor Plan, angle 2 - designed used 3DS-Max, devolped by Sendnet" />
+        <img src="imgs/angledView.jpeg" alt="Angled View of a floor-plan Designed By SendNet" />
         <img src="imgs/3DFloorPlan.jpeg" alt="Rendering 3D floor-plans of a Modern Family Home" />
       </div>
     </div>
@@ -67,9 +88,9 @@
     </div>
     <div class="footer-right">
       <h3 class="font-mono">Projects:</h3>
-      <a href="projects.html#floorPlans">3D Floor Plans</a>
-      <a href="projects.html#Interrier">Interriers</a>
-      <a href="projects.html#exterior">Exteriors</a>
+      <a hreflang="en-us" href="projects.html#floorPlans">3D Floor Plans</a>
+      <a hreflang="en-us" href="projects.html#Interrier">Interriers</a>
+      <a hreflang="en-us" href="projects.html#exterior">Exteriors</a>
     </div>
   </footer>
   <script src="components.js"></script>
