--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-SDC0DBEE92');
+  </script>
   <link rel="icon" href="imgs/siteIcon.png">
-  <title>SENDNET.CO | steve's profile</title>
+  <title>SENDNET PRIVACY POLICY | SENDNET</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="styles/components.css" rel="stylesheet"/>
   <link href="styles/services.css" rel="stylesheet"/>
   <meta name="title" content="sendnet">
-  <meta name="description" content="we create, host and maintain websites for service based industries">
-  <meta name="keywords" content="sendnet, sendnet.co, send, net, website creation, website design, website develop, SendNet, Send Net, webdesign">
+  <meta name="description" content="Here at Sendnet We have clear Privacy Policy as We Belive Transparancy is Key for Long Term Business Relationships">
+  <meta name="keywords" content="sendnet website desiners, sendnet designers, digital consultants, Free Quotes For Websites Creation, host & Maintenance, Contact SendNet Online, Send Net, NZ Website Designers, Free Quote Now, sendnet, sendnet.co, contact sendnet">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="revisit-after" content="1 days">
-  <meta name="author" content="steven metry">
+  <meta name="author" content="Sendnet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDC0DBEE92"></script>
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <img class="nav-logo" src="imgs/whitelogo.png" alt="logo">
+      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - small">
     </div>
     <div class="nav-right">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services I Can Provide</a>
-      <a href="projects.html">Past Work</a>
-      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Me</button>
+      <a hreflang="en-us" href="index.html">Home</a>
+      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="projects.html">Past Work</a>
+      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Us</button>
     </div>
   </nav>
-  <p>
-   <h1>We collect personal information from you, including information about your:</h1> 
+  <h1 class="text-xl font-thin p-6 mb-10">Privacy Policy</h1>
+  <div class="font-thin text-2xl p-6 m-4">
+    <h1>We collect personal information from you, including information about your:</h1> 
     - name 
     <br>
     - contact information 
     <br>
+    <br>
     We collect your personal information in order to: 
     <br>
     - contact you directly 
-    <br>
+    <br><br>
     Providing some information is optional. If you choose not to enter contact details, we'll be unable to provide our service.
-    <br>
+    <br><br>
     You have the right to ask for a copy of any personal information we hold about you, and to ask for it to be corrected if you think it is wrong.
-    <br> 
+    <br><br>
     If you’d like to ask for a copy of your information, or to have it corrected, please contact us at hello@estatenorth.com.
     <br>
-  </p>
+  </div>
   <script src="components.js"></script>
 </body>
 </html>
