--- a/services.html
+++ b/services.html
@@ -1,40 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDC0DBEE92"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SDC0DBEE92');
+  </script>
   <link rel="icon" href="imgs/siteIcon.png">
-  <title>SENDNET.CO | steve's profile</title>
+  <title>SENDNET SERVICES | SENDNET'S PRICING</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="styles/components.css" rel="stylesheet"/>
   <link href="styles/services.css" rel="stylesheet"/>
   <meta name="title" content="sendnet">
-  <meta name="description" content="we create, host and maintain websites for service based industries">
-  <meta name="keywords" content="sendnet, sendnet.co, send, net, website creation, website design, website develop, SendNet, Send Net, webdesign">
+  <meta name="description" content="We have lots of services to help make your sales funnels more efficient, Let us take Care of the work so you can Focus on Your Business">
+  <meta name="keywords" content="Sendnet's Services, View Sendnet Online, Sendnet's Past Work, Services By Sendnet, Sendnet's Free Services, Free Quotes & Services by Sendnet">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
   <meta name="author" content="steven metry">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "url": "https://example.com/apple-pie.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "url": "https://example.com/blueberry-pie.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "url": "https://example.com/cherry-pie.html"
+        }]
+    }
+    </script>
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <img class="nav-logo" src="imgs/whitelogo.png" alt="logo">
+      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - small">
     </div>
     <div class="nav-right">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services I Can Provide</a>
-      <a href="projects.html">Past Work</a>
-      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Me</button>
+      <a hreflang="en-us" href="index.html">Home</a>
+      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="projects.html">Past Work</a>
+      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Us</button>
     </div>
   </nav>
   <main class="main-services-container flex flex-col">
-    <video class="services-video mt-12" controls muted poster="imgs/service-vid-thumb.png">
-      <source src="videos/sendnet01.mp4" type="video/mp4" alt="our immersive 3D cinematic designs">
+    <video class="services-video mt-12" controls muted poster="imgs/service-vid-thumb.png" preload="metadata">
+      <source src="videos/sendnet01.mp4" type="video/mp4" alt="our immersive introduction to who Sendnet is">
       Your browser does not support the video tag.
     </video>
     <h3 class="font-thin p-6 mb-10">Nature Apartment</h3>
     <div class="flagship-service-container">
-      <h1>Our Flagship Service</h1>
+      <h1>Sendnet's Flagship Service</h1>
       <h2>Immersive Designs</h2>
       <h3>Through Cutting Edge software and the most skilled workers, Our Design Team can make your ideas into a real-world visualization of your plans.</h3>
       <h2>These designs are best for</h2>
@@ -46,18 +76,18 @@
     <h3 class="mt-24 text-center font-mono font-thin text-5xl">Services:</h3>
     <div class="cards-container">
       <div class="each-card-container">
-        <img src="imgs/nzarchviz.png" alt="interrier Realistic Photo Render of a home in queenstown">
+        <img src="imgs/nzarchviz.png" alt="Past Work we did for nzarchviz">
           <h2>NZARCHVIZ</h2>
           <p>
             The Landing Page has the main purpose of drawing in the viewer to see what you can offer. We use cutting-edge softwares that allows us to create heat maps from your designs and make adjustments to maximize lead generation.
           <br>  
             Every Site has a landing page but people expect a level of activity or life in any custom or high-end Site.   
          </p>
-        <a href="https://www.nzarchviz.co.nz" class="m-auto">Explore</a>
+        <a hreflang="en-us" href="https://www.nzarchviz.co.nz" class="m-auto black-a-btn">Explore</a>
       </div>
       <div class="each-card-container">
-        <img src="imgs/ecomstore-nextJS.png" alt="3D Floor Plan Realistic Photo Render">
-          <h2>Ecomstore NextJs</h2>
+        <img src="imgs/ecomstore-nextJS.png" alt="Previous Ecommerce Store">
+          <h2>Ecomstore - Nextjs</h2>
           <hr>
           <h3>Online Stores provide 2 main purposes.</h3>
           <p>
@@ -65,25 +95,25 @@
           <br>
           2nd - as a marketing tool. The majority of major companies have a digital presence, including a website. The market has taken a huge liking towards online marketing simplicity because it's more easily accessible to users, websites are easily scalable physical stores are not.
           </p>
-        <a href="https://ecomstore-nextjs-demo.vercel.app" class="m-auto">Explore</a>
+        <a hreflang="en-us" href="https://shop.sendnet.co" class="m-auto black-a-btn">View Demo</a>
       </div>
       <div class="each-card-container">
-        <img src="imgs/github.png" alt="Exterior Realistic Photo Render of a Small Modern Family Home">
+        <img src="imgs/github.png" alt="Some Example Work Hosted On Github - Sendnet's Github Profile">
           <h2>More on Github..</h2>
           <p>
             The Exterior shot has the main purpose of showing off the house as an attractive asset. Plain and simple people want to have nice things, A mediocre car and a Mercedes will still get you to the same place but one is a positive extension of yourself and the other is a negative display of it. 
           <br>
             The Exterior shot also serves for the client to adjust any major concerns with materials,  or anything that doesn't fit right.
           </p>
-        <a href="https://github.com/stevemetry" class="m-auto">Explore</a>
+        <a hreflang="en-us" href="https://github.com/stevemetry" class="m-auto black-a-btn">Explore</a>
       </div>
     </div>
   </div>
-    <img class="full-img" src="imgs/summerFamily.png" alt="realistic render of the exterior of a home">
+    <img class="full-img" src="imgs/summerFamily.png" alt="render of the exterior of a home created by sendnet">
     <div class="content-container">
       <h1>Sendnet Strives for Designing Excellence at an Affordable price</h1>
-      <h3>Let us Prove How Much Your Customers Will Appreciate The difference We Make</h3>
-      <button onclick="goToDifferentPage('services')" href="services.html" class="main-btn m-auto">Get a Quick Quote</button>
+      <h3>Take A Look at Our Services & Judge us for Yourself, Let us Prove How Much Your Customers Will Appreciate The difference We Make.</h3>
+      <button onclick="goToDifferentPage('services')" hreflang="en-us" href="services.html" class="main-btn m-auto">Get a Quick Quote</button>
     </div>
     <div class="main-contact-container">
       <div class="site-info-container">
@@ -187,9 +217,9 @@
     </div>
     <div class="footer-right">
       <h3 class="font-mono">Projects:</h3>
-      <a href="projects.html#floorPlans">3D Floor Plans</a>
-      <a href="projects.html#Interrier">Interriers</a>
-      <a href="projects.html#exterior">Exteriors</a>
+      <a hreflang="en-us" href="projects.html#floorPlans">3D Floor Plans</a>
+      <a hreflang="en-us" href="projects.html#Interrier">Interriers</a>
+      <a hreflang="en-us" href="projects.html#exterior">Exteriors</a>
     </div>
   </footer>
   <script src="components.js"></script>
