updated styling added designs page

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
   
     gtag('config', 'G-SDC0DBEE92');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3159767499477222"
+  crossorigin="anonymous"></script>
   <link rel="icon" href="imgs/siteIcon.png">
   <title>CONTACT SENDNET | SENDNET</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -22,17 +24,46 @@
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
   <meta name="author" content="Sendnet">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name" : "Sendnet",
+      "url": "https://sendnet.co/",
+      "logo": "https://sendnet.co/imgs/whiteLogo.png",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://shop.sendnet.co?search={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name" : "Sendnet",
+      "url": "https://www.sendnet.co",
+      "logo": "https://www.sendnet.co/imgs/whiteLogo.png"
+    }
+    </script>
+    <link rel="canonical" href="https://sendnet.co/contact.html" />
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - Small">
+      <img class="nav-logo" src="imgs/whiteLogo.png" alt="Sendnet Logo - small">
     </div>
     <div class="nav-right">
       <a hreflang="en-us" href="index.html">Home</a>
-      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="designs.html">Templates</a>
+      <a hreflang="en-us" href="services.html">Our Services</a>
       <a hreflang="en-us" href="projects.html">Past Work</a>
-      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Me</button>
+      <a hreflang="en-us" href="contact.html">Contact Us</a>
     </div>
   </nav>
   <main>
