--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,6 +8,8 @@
   
     gtag('config', 'G-SDC0DBEE92');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3159767499477222"
+  crossorigin="anonymous"></script>
   <link rel="icon" href="imgs/siteIcon.png">
   <title>SENDNET PRIVACY POLICY | SENDNET</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -21,6 +23,14 @@
   <meta name="language" content="English">
   <meta name="author" content="Sendnet">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDC0DBEE92"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://sendnet.co",
+      "logo": "https://sendnet.co/imgs/whiteLogo.png"
+    }
+    </script>
 </head>
 <body>
   <nav class="navbar">
@@ -29,9 +39,10 @@
     </div>
     <div class="nav-right">
       <a hreflang="en-us" href="index.html">Home</a>
-      <a hreflang="en-us" href="services.html">Services I Can Provide</a>
+      <a hreflang="en-us" href="designs.html">Templates</a>
+      <a hreflang="en-us" href="services.html">Our Services</a>
       <a hreflang="en-us" href="projects.html">Past Work</a>
-      <button onclick="goToDifferentPage('contact')" class="main-btn">Contact Us</button>
+      <a hreflang="en-us" href="contact.html">Contact Us</a>
     </div>
   </nav>
   <h1 class="text-xl font-thin p-6 mb-10">Privacy Policy</h1>
@@ -51,8 +62,42 @@
     You have the right to ask for a copy of any personal information we hold about you, and to ask for it to be corrected if you think it is wrong.
     <br><br>
     If you’d like to ask for a copy of your information, or to have it corrected, please contact us at hello@estatenorth.com.
+
+    <h3 class="text-3xl font-normal my-5">Besides our staff, we share this information with:</h3> 
+    - Google Adsense in order to Provide personalised ads.
     <br>
+    <br>
+    Third party vendors, including Google, use cookies to serve ads based on a user's prior visits to your website or other websites.
+    Google's use of advertising cookies enables it and its partners to serve ads to your users based on their visit to your sites and/or other sites on the Internet.
+
+    Users may opt out of personalized advertising by visiting Ads Settings. (Alternatively, you can direct users to opt out of a third-party vendor's use of cookies for personalized advertising by visiting www.aboutads.info)
+   <br>
+   <br>
+    <a class="underline text-blue-400"href="https://www.aboutads.info/choices/">https://www.aboutads.info/choices/</a>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3159767499477222"
+    crossorigin="anonymous"></script>
+  <!-- Horizontal-Responsive-01 -->
+  <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-3159767499477222"
+    data-ad-slot="2178897628"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  <footer>
+    <div class="footer-left">
+      <h3 class="font-mono">SENDNET</h3>
+    </div>
+    <div class="footer-right">
+      <h3 class="font-mono">Projects:</h3>
+      <a hreflang="en-us" href="projects.html#floorPlans">3D Floor Plans</a>
+      <a hreflang="en-us" href="projects.html#Interrier">Interriers</a>
+      <a hreflang="en-us" href="projects.html#exterior">Exteriors</a>
+    </div>
+  </footer>
   <script src="components.js"></script>
 </body>
 </html>
